--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -19,22 +19,30 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://localhost:8000/">INCEL LAIR</a>
-        <div class="container text-left"></div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="{% static 'portfolio/resume.pdf'%}" target="blank">Resume</a>
-                        <a class="nav-item nav-link" href="https://www.linkedin.com/" target="blank">Linkedln</a>
-                        <a class="nav-item nav-link" href="https://www.reddit.com/r/all/" target="blank">Reddit</a>
-                        <a class="btn btn-primary" href="{% url 'blog:all_blogs'%}" target="blank">Blog</a>
-                </div>
-                
-            </div>
-        </div>
-      </nav>
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="container text-right"></div>
+      
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          
+          <li class="nav-item active">
+            <a class="nav-link" href="{% static 'portfolio/resume.pdf'%}" target = "blank">Resume</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/" target = "blank">Linkedln</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.reddit.com/r/all/" target = "blank">Reddit</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-primary" href="{% url 'blog:all_blogs'%}" target = "blank">BLOG</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
       {% block content %}{% endblock %}
 
     <!-- Optional JavaScript; choose one of the two! -->
